--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -1,8 +1,9 @@
 #footer{
-    width:100%;
-    height:175px;
+    background: none repeat scroll 0 0 #E2E2E2;
+    display: block;
     float: left;
-    display:block;
+    height: 175px;
+    width: 100%;
 }
 
 #main_footer{
@@ -11,3 +12,24 @@
     margin:0 auto;
     height:175px;
 }
+
+#main_footer ul {
+    float: left;
+    list-style: none outside none;
+    padding-bottom: 4px;
+    padding-top: 40px;
+    width: 240px;x;
+}
+
+#main_footer a{
+  color:#0469e7;
+  font-size:12px;
+	text-decoration:none;
+}
+
+#main_footer .text{
+  font-size:13px;
+  color:#000000;
+	font-weight:bold;
+}
+
