--- a/app/assets/stylesheets/lowest.css
+++ b/app/assets/stylesheets/lowest.css
@@ -3,6 +3,6 @@
     border-top: 10px solid #F9F9F9;
     float: left;
     height: 150px;
-    margin: 20px 0 0;
+    margin: 20px 0 15px;
     width: 960px;
 }
