product nav dynamic in landing page+added jquery for it

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -33,29 +33,7 @@
         </div>
     </div>
     <div id="nav_content">
-         <div id="nav">
-            <div class="nav_title">
-            <span class="nav_head"> Desktops</span>
-            </div>
-            <div class="nav_title">
-            <span class="nav_head">Laptops and Notebooks</span>
-            </div>
-            <div class="nav_title">
-            <span class="nav_head"> Computer Hardware</span>
-            </div>
-            <div class="nav_title">
-            <span class="nav_head">Computer Software</span>
-            </div>
-            <div class="nav_title">
-            <span class="nav_head">Gaming Devices</span>
-            </div>
-            <div class="nav_title">
-            <span class="nav_head">Networking Devices</span>
-            </div>
-            <div class="nav_title">
-            <span class="nav_head">Other Gadgets and Devices</span>
-            </div>
-         </div>
+    	<%= render 'product_sidebar'%>
    <!--banner slider-->
          <div id="banner">
 
